--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,4 +1,8 @@
 {
+  "compilerOptions": {
+    "jsx": "react-jsx",
+    "types": ["jest", "node"]
+  },
   "files": [],
   "references": [
     { "path": "./tsconfig.app.json" },
