--- a/server/package.json
+++ b/server/package.json
@@ -8,8 +8,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npx nodemon server.js",
-    "start": "node server.js"
+    "dev": "nodemon --watch server --ext ts --exec tsx server.ts",
+    "start": "tsx server.ts"
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -18,6 +18,11 @@
     "openai": "^6.16.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.11"
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.6",
+    "@types/node": "^24.0.0",
+    "nodemon": "^3.1.11",
+    "tsx": "^4.21.0",
+    "typescript": "^5.9.3"
   }
 }
